# pa

./: README.md  api.json  docker-compose.yml  pyproject.toml  test_data.md
alembic/: env.py
alembic/versions/: 2e79726b8877_init.py  f1923ac535d6_fixed_the_typo.py
app/: dependencies.py  exception.py  main.py
app/api/: router.py
app/api/v1/: auth.py  router.py  task.py  user.py
app/core/: config.py  db.py  exception.py  pydantic.py
app/models/: __init__.py  common.py  response.py  tasks.py  users.py
app/repository/: __init__.py  tasks.py  users.py
app/schemas/: __init__.py  auth.py  response.py  tasks.py
app/services/: __init__.py  tasks.py  users.py
app/utils/: __init__.py  jwt.py  password.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: router.py  task.py
backend/app/core/: __init__.py  db.py  logger.py  pydantic.py
backend/app/models/: tasks.py
backend/app/schemas/: auth.py
backend/app/services/: tasks.py
backend/app/utils/: __init__.py  password.py
backend/tests/: __init__.py  test_auth.py  test_tasks.py
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: navbar.tsx
frontend/src/hooks/: auth.tsx  task.tsx  use-auth.ts  use-tasks.ts  user.tsx
frontend/src/lib/: axios.ts  trycatch.ts
frontend/src/routes/: __root.tsx  auth.login.tsx  auth.sign-up.tsx  index.tsx  profile.tsx  tasks.tsx
tests/: conftest.py  test_tasks_admin.py  test_users.py  test_users_admin.py
