[project]
name = "primetradeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.0",
    "sqlmodel>=0.0.38",
]

[tool.setuptools.packages.find]
include = ["app*"] 

[tool.uv]
package=true

[project.scripts]
dev = "app.main:main"